--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@
 opencv_python==3.4.5.20
 docopt==0.6.2
 gym==0.10.9
-atari-py==0.1.15
+Keras==2.2.4
+numpy==1.15.4
 python_dateutil==2.8.0
+atari_py
+tensorflow
