--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git+https://github.com/DamienAllonsius/agent_option_library.git#egg=ao
+-e git+https://github.com/DamienAllonsius/agent_option_library.git#egg=ao	
 opencv_python==3.4.5.20
 docopt==0.6.2
 gym==0.10.9
@@ -8,3 +8,4 @@ python_dateutil==2.8.0
 atari_py
 tensorflow
 matplotlib
+gym-minigrid
