--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
--e git+https://github.com/DamienAllonsius/agent_option_library.git#egg=ao	
+-e git+https://github.com/aig-upf/gridenvs.git#egg=gridenvs
+-e git+https://github.com/DamienAllonsius/agent_option_library.git#egg=ao
+
 opencv_python==3.4.5.20
 docopt==0.6.2
 gym==0.10.9
