modified requirement, the library has changed name !

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 -e git+https://github.com/aig-upf/gridenvs.git#egg=gridenvs
--e git+https://github.com/DamienAllonsius/agent_option_library.git#egg=ao
+-e git+https://github.com/DamienAllonsius/manager_option_library.git#egg=mo
 
 opencv_python==4.1.0.25
 docopt==0.6.2
