added a new manager: ManagerA2CPCIntraRewards, that now computes the intra_reward for options. Protocol 11 uses this manager on Montezuma

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ __pycache__
 env/
 src/
 results/
-metrics/
-backup_draw.py
-cluster_utils/RL-cluster-venv/
+*.png
+backup_draw.pycluster_utils/RL-cluster-venv/
 cluster_utils/jobs/
