abstract classes integration

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 -e git+https://github.com/aig-upf/gridenvs.git#egg=gridenvs
--e git+https://github.com/DamienAllonsius/manager_option_library.git#egg=mo
 
 opencv_python==4.1.0.25
 docopt==0.6.2
@@ -12,3 +11,4 @@ tensorflow
 matplotlib==3.1.1
 gym-minigrid
 pandas
+tqdm
