--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 -e git+https://github.com/aig-upf/gridenvs.git#egg=gridenvs
+-e git+https://github.com/bcornelusse/microgridRLsimulator.git#egg=microgridRLsimulator
 
 opencv_python==4.1.0.25
 docopt==0.6.2
